--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,3 @@
 .title {
-    font-family: 'Josefin Sans', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 60px;
-    margin-top: 120px;
-}
-
-.landing-page-icon {
-    margin-top: 70px;
-    margin-left: 50px;
-    margin-right: 100px;
-}
-
-.btn {
-    margin-top: 25px;
-}
-.nav-item {
-    text-decoration: none;
-    color: black;
-    font-size: 20px;
+    font-family: "Dancing Script", cursive;
 }
