--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
 .title {
     font-family: "Dancing Script", cursive;
+    font-size: 50px;
+}
+.logo {
+    height: 300px;
+    width: 250px;
+    justify-content: center;
+}
+
+
+
+
+
+
+@media (max-width: 540px) {
+    .title {
+        font-size: 30px;
+    }
 }
