--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,11 @@
-@media (min-width: 541px){
-    .title {
-        font-family: "Dancing Script", cursive;
-        font-size: 50px;
-    }
-    .logo {
-        height: 300px;
-        width: 250px;
-        justify-content: center;
-    }
+.title {
+     font-family: "Dancing Script", cursive;
+     font-size: 50px;
+}
+.logo {
+    height: 300px;
+    width: 250px;
+    justify-content: center;
 }
 
 
@@ -23,8 +21,17 @@
     .txt {
         font-size: 30px;
         text-align: center;
+        margin-top: 15;
     }
     .newBtn {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+}
+
+@media (min-width: 700px) {
+    .logo {
         margin-left: auto;
         margin-right: auto;
         display: block;
